--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
         <h2 class="text-center">Basic membership link</h2>
         <h4>Sign up for free and get basic access to the community.</h4>
         <br/>
-        <%= link_to "Sign Up with Basic", "#", class: 'btn btn-primary btn-lg btn-block' %>
+        <%= link_to "Sign Up with Basic", new_user_registration_path(plan: @basic_plan), class: 'btn btn-primary btn-lg btn-block' %>
       </div>
       
     </div>
@@ -17,7 +17,7 @@
       <div class="well">
         <h2 class="text-center">Pro membership link</h2>
         <h4>Sign up for the pro account for $10/month and get access to the community and contact information!</h4>
-        <%= link_to "Sign Up with Pro", "#", class: 'btn btn-success btn-lg btn-block' %>
+        <%= link_to "Sign Up with Pro", new_user_registration_path(plan: @pro_plan), class: 'btn btn-success btn-lg btn-block' %>
       </div>
       
     </div>
