--- a/app/views/devise/registrations/_pro_form.html.erb
+++ b/app/views/devise/registrations/_pro_form.html.erb
@@ -33,6 +33,6 @@
   </div>
   
   <div class="actions form-group">
-    <%= f.submit "Sign up", class: 'btn btn-success', id: 'form-signup-btn' %>
+    <%= f.submit "Sign up", class: 'btn btn-success', id: 'form-submit-btn' %>
   </div>
 <% end %>
